<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_login_account"
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_45"
            android:hint="@string/text_login_account_hint" />

        <EditText
            android:id="@+id/et_login_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_45"
            android:hint="@string/text_login_pwd_hint" />


        <Button
            android:id="@+id/btn_login_login"
            style="@style/CommonSubmitBtn"
            android:textColor="@color/fontcolor_white"
            android:text="@string/text_login_login"
            app:bl_solid_color="@color/bgcolor_login_btn"
            />

        <!--<Button-->
            <!--android:layout_width="300dp"-->
            <!--android:layout_height="50dp"-->
            <!--android:layout_marginTop="5dp"-->
            <!--android:gravity="center"-->
            <!--android:padding="0dp"-->
            <!--android:text="有波纹触摸反馈的按钮"-->
            <!--android:textColor="@android:color/white"-->
            <!--android:textSize="20sp"-->
            <!--app:bl_corners_radius="20dp"-->
            <!--app:bl_pressed_drawable="#71C671"-->
            <!--app:bl_ripple_color="#71C671"-->
            <!--app:bl_ripple_enable="true"-->
            <!--app:bl_stroke_color="#8c6822"-->
            <!--app:bl_stroke_width="2dp"-->
            <!--app:bl_unPressed_drawable="#7CFC00" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_login_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_login_forget" />

            <TextView
                android:id="@+id/tv_login_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_login_register" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            style="@style/CommonBodyText"
            android:layout_gravity="bottom"
            android:text="@string/text_login_protocol1" />

        <TextView
            android:id="@+id/tv_login_protocol"
            style="@style/CommonBodyText"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:layout_gravity="bottom"
            android:text="@string/text_login_protocol" />
    </LinearLayout>


</LinearLayout>